5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2567.log
== TEST (2019-06-05 19:02:35) 
-- CODE:
n=int(input("digite um numero "))
a=n*"*"
print(a)
-- OUTPUT:
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:34:52) 
-- CODE:
n=int(input("digite um numero ")

while(n>1):
	v="*"*n
	n=n-1
	print(v)

-- ERROR:
File "XXXX", line 3
    while(n>1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:36:40) 
-- CODE:
n=int(input("digite um numero ")
while(n>1):
	v="*"*n
	n=n-1
	print(v)

-- ERROR:
File "XXXX", line 2
    while(n>1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:35) 
-- CODE:
n=int(input("digite um numero ")
while n>1:
	v="*"*n
	n=n-1
	print(v)

-- ERROR:
File "XXXX", line 2
    while n>1:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:41:26) 
-- CODE:
n=int(input("digite um numero ")
i=n
while(i>1):
	v="*"*i
	i=i-1
	print(v)

-- ERROR:
File "XXXX", line 2
    i=n
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:42:03) 
-- CODE:
n=int(input("digite um numero "))

while(n>1):
	v="*"*n
	n=n-1
	print(v)

-- OUTPUT:
********
*******
******
*****
****
***
**
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:42:14) 
-- CODE:
n=int(input("digite um numero "))

while(n>=1):
	v="*"*n
	n=n-1
	print(v)

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:16) 
-- CODE:
n=int(input("digite um numero "))
i=n
while(n>=1):
	v="*"*n
	n=n-1
	print(v)
n=1	
while(n<=i):
	v="*"*n
	n=n+1
	print(v)


-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:44:39) 
-- CODE:
n=int(input("digite um numero "))
i=n
while(n>=1):
	v="*"*n
	n=n-1
	print(v)
n=1	
while(n<=i):
	v="*"*n
	n=n+1
	print(v)


-- EXECUTION TIME:
0.743913
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
